2004-08-23  Martin Baulig  <martin@ximian.com>

	* test-285.cs: New test for #52428.

2004-08-22  Martin Baulig  <martin@ximian.com>

	* test-154.cs: Added test case for #59867.

2004-08-05  Martin Baulig  <martin@ximian.com>

	* test-154.cs: Added test case for #59429.

2004-08-04  Martin Baulig  <martin@ximian.com>

	* Makefile (test-generic-3): New target to run all the generic
	tests.	

2004-08-03  Ben Maurer  <bmaurer@ximian.com>

	* test-283.cs: for 62275.
	
	* unsafe-9.cs: new test for #62263.

2004-08-03  Martin Baulig  <martin@ximian.com>

	* test-282.cs: New test for #62322.

2004-08-03  Martin Baulig  <martin@ximian.com>

	* gen-64.cs: New test.

2004-07-25  Martin Baulig  <martin@ximian.com>

	* Makefile (test-generic): Correctly set the MONO_PATH to run
	things in the v2.0 environment.
	(test-generic-2): New target.
	(test-everything): New target to run everything.

2004-07-25  Martin Baulig  <martin@ximian.com>

	* 2test-12.cs, 2test-13.cs: New tests for partial classes.

2004-07-23  Martin Baulig  <martin@ximian.com>

	* 2test-10.cs, 1test-11.cs: New tests for partial classes.	

2004-07-22  Martin Baulig  <martin@ximian.com>

	* test-281.cs: New test.

2004-07-20  Martin Baulig  <martin@ximian.com>

	* Makefile: Enable 2test-7.

2004-07-20  Martin Baulig  <martin@ximian.com>

	* 2test-9.cs: New test for iterators.

2004-07-20  Martin Baulig  <martin@ximian.com>

	* 2test-8.cs: New test for iterators.

2004-07-18  Martin Baulig  <martin@ximian.com>

	* gen-63.cs: New test.

2004-07-16  Martin Baulig  <martin@ximian.com>

	* gen-62.cs: New test for generic iterators.

2004-07-16  Martin Baulig  <martin@ximian.com>

	* gen-61.cs: New test for anonymous methods
	(not yet implemented -> test disabled)

2004-07-13  Marek Safar <marek.safar@seznam.cz>

	* test-279.cs: New test for #61293.

2004-07-13  Martin Baulig  <martin@ximian.com>

	* gen-60.cs: New test for #58305.

2004-07-12  Martin Baulig  <martin@ximian.com>

	* gen-58.cs: New test.
